# loanpy

./: .coverage  .coveragerc  .gitignore  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Computer-aided borrowing detection framework.pptx  Diss_Martinovic0.0.docx  LICENSE  MANIFEST  MANIFEST.in  Makefile  Match.xlsx  Protoforms.xlsx  README.md  README.rst  SECURITY.md  Substitutions.csv  __init__.py  adrc.py  conf.py  coverage.lcov  cvfb.txt  helpers.py  index.rst  inv.json  invs.json  large_files.txt  loanfinder.py  noderivIN.csv  push.bat  pyproject.toml  qfysc.py  readme.md  readme.rst  requirements.txt  sanity.py  (+4 more)
.circleci/: config.yml  fixed_config.yml  generate_circleci_config.py  generate_circleci_config_fixed.py
.github/: pull_request_template.md
Code/: Got_phonotactics.txt  Gothic_Preprocessing.txt  Hun_phonotactics.txt  Match.txt  NSE.txt  Protoformgenerator.txt  QfyC_UFUUg.txt  QfyC_layers.txt  QfyV_UFUUg.txt  QfyV_layers.txt  SoundSubstitutions.txt  Soundcounter.txt  Subtract_derivational_suffixes.txt  Wikilingparser.txt  Zaiczextractor1.txt  Zaiczextractor2.txt  add_got_links.txt  droplines.txt  gotcsv2dict.txt  hun2ipa.txt  huncsv2dict.txt  loanpy.py  loanpy34.py  loanpy38.py  loanpy44.py  oneperline.txt  uralonetparser1.txt  uralonetparser2.txt
Data/: AllChanges.csv  G_allSubstitutionsCVCV.csv  G_clean+ipa+subst1.csv  G_raw_links.csv  Gotdict.py  Gothic_Wikiling_scraped.csv  H_phon.csv  Hun2IPA.csv  Hun_old_IPA.csv  Hun_old_IPA4.csv  Hun_old_IPA5.csv  Hundict.py  NSE.xlsx  NSEFU.csv  NSEU.csv  NSEUg.csv  NSE∑.csv  Protoforms.csv  Protoforms_noderiv.csv  Quantify_FU_Consonants.csv  Quantify_SoundChanges.xlsx  Quantify_U_Vowels.csv  Quantify_∑_Consonants.csv  Quantify_∑_Vowels.csv  SCin.csv  SCin1.1.csv  Zaiczextractor1.csv  Zaiczextractor2.csv  hun_final.csv  ipa.csv  result.csv  root_withderiv_oneperline.csv  uew_UFUUg.csv  unknown.csv  uralonet_webscraped_editedinexcel.csv
Presentation/: AllChanges.xlsx  Protoforms_noderiv.xlsx  README.md  SCin_uew.csv
coverage_report/: index-sort-f.html  index-sort-l.html  index.html
docs/: .buildinfo  .homelatex.rst  LoanPy Documentation.ipynb  LoanPy_Documentation.ipynb  Makefile  conf.py  documentation (copy).html  documentation.html  documentation.rst  genindex.html  home.rst  index.html  index.md  index.rst  installation.rst  make.bat  objects.inv  postprocesslatex.py  py-modindex.html  quickstart.rst  requirements.txt  sc.json  sc.tsv  sc_p.tsv  search.html  searchindex.js  testing.rst  tutorial.html  tutorial.rst
ideas/: statistics.py
inputdata/: g_raw.csv  substi_single.csv  zaicz_in.csv
latex/: ipa2tipa.py
loanpy/: .~lock.ipa_all.csv#  __init__.py  __init__.py.func-sort-c.html  __init__.py.func.html  __init__.py.gcov.html  adapt.py  adapter.py  cluster.py  core.py  (+32 more)
loanpy.egg-info/: PKG-INFO  SOURCES.txt
(+434 files in other folders)
