[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loanpy"
version = "4.0.0"
description = "Linguistic toolkit for loanword detection and sound change."
readme = "README.rst"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Viktor Martinović", email = "viktor.martinovic@hotmail.com" }
]
keywords = ["linguistics", "loanwords", "language-contact", "sound-change"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Linguistic",
]
urls = { Homepage = "https://github.com/loanwordbank/loanpy", Documentation = "https://loanpy.readthedocs.io" }

[project.optional-dependencies]
test = ["pytest>=7.4", "pytest-cov>=4.1"]
docs = ["sphinx>=7.2", "sphinx-rtd-theme>=2.0", "myst-parser>=2.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["loanpy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
branch = true
source = ["loanpy"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.flake8]
max-line-length = 88
